# Training-mini-projects

./: Makefile  README.md  mini_projects.ipynb  pyproject.toml
projects/avatar_cropping/: main.py
projects/bars_search/: index.html  main.py
projects/count_the_clicks_on_links/: main.py
projects/fake_people/: main.py
projects/get_the_weather/: main.py
projects/password_strength/: main.py
projects/sending_emails/: main.py
projects/space_photos/: main.py
projects/speech_preparing/: main.py
projects/spin_the_planet/: main.py
projects/telegram_timer/: main.py  ptbot.py
